--- a/src/pages/Timetable.css
+++ b/src/pages/Timetable.css
@@ -46,6 +46,7 @@
   width: 100vw !important;
   max-width: 100vw !important;
   justify-content: flex-start !important;
+  text-align: center;
 }
 
 .timetable-card > * {
@@ -55,6 +56,7 @@
   padding-left: 4px !important;
   padding-right: 4px !important;
   box-sizing: border-box !important;
+  text-align: center;
 }
 
 .timetable-card h2 {
